# repo_structure

./: .bazelrc  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  BUILD.bazel  MODULE.bazel  PUBLISHING.md  README.md  REPORT.md  conflicting_test_config.yaml  container_app_test.py  container_structure_test.yaml  local_run.sh  main.py  py_layer.bzl  pyproject.toml  repo_structure.py  repo_structure.yaml  repo_structure_config.py  repo_structure_config.yaml  repo_structure_config_test.py  repo_structure_enforcement.py  repo_structure_enforcement_test.py  repo_structure_lib.py  repo_structure_schema.py  repo_structure_test.py  requirements.in  requirements.txt  requirements_lock.txt  test_config.yaml
.github/: pull_request_template.md
.github/workflows/: bazel.yml  build-and-test-ci.yaml  conda_pytest.yaml  poetry-ci.yaml  poetry-publish-to-pypi.yaml  pre-commit.yml  publish-to-pypi.yaml
example/: README.md  example_config.yaml
repo_structure/: __init__.py  __main__.py  __main___test.py  _version.py  config.schema.json  main.py  repo_structure_benchmark_test.py  repo_structure_config.py  repo_structure_config_test.py  repo_structure_diff_scan.py  repo_structure_diff_scan_test.py  repo_structure_enforcement.py  repo_structure_enforcement_test.py  repo_structure_full_scan.py  repo_structure_full_scan_test.py  repo_structure_lib.py  repo_structure_lib_test.py  repo_structure_report.py  repo_structure_report_test.py  repo_structure_schema_test.py  repo_structure_test_lib.py  test_config_allow_all.yaml
