load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")

# This stanza calls a rule that generates targets for managing pip dependencies
# with pip-compile.
compile_pip_requirements(
    name = "requirements",
    src = "requirements.in",
    requirements_txt = "requirements_lock.txt",
)

py_library(
    name = "repo_structure_config",
    srcs = ["repo_structure_config.py"],
    deps = [
        "@pypi//ruamel_yaml",
    ],
)

py_test(
    name = "repo_structure_config_test",
    srcs = [
        "repo_structure_config_test.py",
    ],
    data = [
        "test_config.yaml",
    ],
    deps = [
        ":repo_structure",
        ":repo_structure_config",
        "@pypi//pytest",
    ],
)
        "@pypi//pytest",
    ],
)

py_binary(
    name = "main",
    srcs = ["main.py"],
    data = [
        "test_config.yaml",
    ],
    deps = [
        "//:repo_structure_config",
        "@pypi//click",
    ],
)
