[tool.poetry]
name = "repo-structure"
version = "0.1.0"
description = "Check the directory structure of your repository"
authors = ["Jochen Issing <c.333+git@nesono.com>"]
license = "3-Clause BSD License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
click = "8.1.7"
ruamel-yaml = "0.18.6"
gitignore-parser = "0.1.11"
jsonschema = "4.23.0"


[tool.poetry.group.dev.dependencies]
pytest = "8.1.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
